Update Colab notebook with complete workflow

--- a/notebooks/vllm_colab.ipynb
+++ b/notebooks/vllm_colab.ipynb
@@ -4,27 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# vLLM Benchmarking for systemds-bench-gpt\n",
+    "# SYSTEMDS-BENCH-GPT: vLLM Benchmarking\n",
     "\n",
-    "This notebook runs vLLM benchmarks on Google Colab's GPU.\n",
+    "This notebook runs all vLLM benchmarks on Google Colab's GPU.\n",
     "\n",
-    "**After running this notebook:**\n",
-    "1. Download `vllm_results.zip`\n",
-    "2. Unzip it in your project folder\n",
-    "3. Run `python scripts/report.py --out benchmark_report.html`\n",
-    "4. The report will include vLLM alongside OpenAI, MLX, Ollama\n",
+    "**Steps:**\n",
+    "1. Check GPU and install dependencies\n",
+    "2. Clone/update repository\n",
+    "3. Start vLLM server\n",
+    "4. Run all 4 workloads\n",
+    "5. Download results\n",
     "\n",
     "**Requirements:** Enable GPU runtime (Runtime → Change runtime type → T4 GPU)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Step 1: Check GPU is available\n",
-    "!nvidia-smi"
+    "## Step 1: Check GPU"
    ]
   },
   {
@@ -33,9 +31,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2: Install dependencies\n",
+    "# Verify GPU is available\n",
+    "!nvidia-smi\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"If you see a GPU above (T4, V100, etc.), you're good!\")\n",
+    "print(\"If not: Runtime → Change runtime type → T4 GPU\")\n",
+    "print(\"=\"*50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: Install Dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install vLLM and other dependencies\n",
     "!pip install vllm torch transformers accelerate -q\n",
-    "!pip install pyyaml numpy tqdm datasets requests psutil rouge-score -q"
+    "!pip install pyyaml numpy tqdm datasets requests psutil rouge-score -q\n",
+    "print(\"\\n✓ Dependencies installed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Clone Repository"
    ]
   },
   {
@@ -44,10 +71,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3: Upload your project files\n",
-    "# Option A: Clone from GitHub (update URL to your repo)\n",
-    "# !git clone https://github.com/YOUR_USERNAME/systemds-bench-gpt.git\n",
-    "# %cd systemds-bench-gpt\n"
+    "# Clone or update repository\n",
+    "import os\n",
+    "\n",
+    "if os.path.exists('/content/systemds-bench-gpt'):\n",
+    "    print(\"Repository exists, pulling latest...\")\n",
+    "    %cd /content/systemds-bench-gpt\n",
+    "    !git pull origin main\n",
+    "else:\n",
+    "    print(\"Cloning repository...\")\n",
+    "    !git clone https://github.com/kubraaksux/systemds-bench-gpt.git\n",
+    "    %cd /content/systemds-bench-gpt\n",
+    "\n",
+    "print(\"\\n✓ Repository ready\")\n",
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: Start vLLM Server"
    ]
   },
   {
@@ -56,27 +100,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 4: Start vLLM server\n",
+    "# Start vLLM server with phi-2 model\n",
     "import subprocess\n",
     "import time\n",
     "\n",
-    "MODEL = \"microsoft/phi-2\"  # 2.7B params, fits in T4 GPU\n",
+    "MODEL = \"microsoft/phi-2\"  # 2.7B params, fits in T4 GPU (15GB)\n",
+    "\n",
+    "# Kill any existing server\n",
+    "!pkill -f \"vllm.entrypoints\" 2>/dev/null || True\n",
     "\n",
     "print(f\"Starting vLLM server with model: {MODEL}\")\n",
-    "print(\"This takes ~2 minutes to load the model...\")\n",
+    "print(\"This takes 2-3 minutes to load the model...\")\n",
+    "print()\n",
     "\n",
-    "server_process = subprocess.Popen(\n",
-    "    [\"python\", \"-m\", \"vllm.entrypoints.openai.api_server\",\n",
-    "     \"--model\", MODEL,\n",
-    "     \"--host\", \"0.0.0.0\",\n",
-    "     \"--port\", \"8000\",\n",
-    "     \"--dtype\", \"float16\"],\n",
-    "    stdout=subprocess.PIPE,\n",
-    "    stderr=subprocess.PIPE\n",
-    ")\n",
+    "# Start server in background\n",
+    "!nohup python -m vllm.entrypoints.openai.api_server \\\n",
+    "    --model {MODEL} \\\n",
+    "    --host 0.0.0.0 \\\n",
+    "    --port 8000 \\\n",
+    "    --dtype float16 > vllm_server.log 2>&1 &\n",
     "\n",
-    "time.sleep(120)  # Wait for model to load\n",
-    "print(\"Server ready!\")"
+    "# Wait for server to start\n",
+    "print(\"Waiting for model to load...\")\n",
+    "for i in range(36):  # 3 minutes max\n",
+    "    time.sleep(5)\n",
+    "    print(f\"  {(i+1)*5}s elapsed...\", end=\"\")\n",
+    "    try:\n",
+    "        import requests\n",
+    "        resp = requests.get(\"http://localhost:8000/v1/models\", timeout=5)\n",
+    "        if resp.status_code == 200:\n",
+    "            print(\"\\n\\n\" + \"=\"*50)\n",
+    "            print(\"✓ vLLM SERVER IS READY!\")\n",
+    "            print(\"=\"*50)\n",
+    "            print(resp.json())\n",
+    "            break\n",
+    "    except:\n",
+    "        print(\" still loading...\")\n",
+    "else:\n",
+    "    print(\"\\n\\n✗ Server failed to start. Check logs:\")\n",
+    "    !tail -50 vllm_server.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 5: Verify Server"
    ]
   },
   {
@@ -85,16 +154,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 5: Verify server is running\n",
+    "# Quick test to verify server works\n",
     "import requests\n",
     "\n",
     "try:\n",
     "    resp = requests.get(\"http://localhost:8000/v1/models\", timeout=10)\n",
-    "    print(\"✓ vLLM server is running!\")\n",
-    "    print(resp.json())\n",
+    "    print(\"✓ Server is running!\")\n",
+    "    print(f\"  Models: {resp.json()}\")\n",
     "except Exception as e:\n",
     "    print(f\"✗ Server not ready: {e}\")\n",
-    "    print(\"Re-run the previous cell and wait longer\")"
+    "    print(\"\\nRun the previous cell again or check logs:\")\n",
+    "    !tail -30 vllm_server.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 6: Run ALL Benchmarks"
    ]
   },
   {
@@ -103,20 +180,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 6: Run ALL benchmarks\n",
-    "# Results will be saved in the same format as OpenAI/MLX/Ollama\n",
+    "# Run all 4 workloads\n",
+    "import os\n",
+    "os.chdir('/content/systemds-bench-gpt')\n",
     "\n",
-    "workloads = [\"math\", \"reasoning\", \"summarization\", \"json_extraction\"]\n",
+    "workloads = [\n",
+    "    (\"math\", \"results/vllm_math\"),\n",
+    "    (\"reasoning\", \"results/vllm_reasoning\"),\n",
+    "    (\"summarization\", \"results/vllm_summarization\"),\n",
+    "    (\"json_extraction\", \"results/vllm_json\"),\n",
+    "]\n",
     "\n",
-    "for wl in workloads:\n",
-    "    print(f\"\\n{'='*50}\")\n",
-    "    print(f\"Running {wl} benchmark...\")\n",
-    "    print(f\"{'='*50}\")\n",
+    "for workload, output in workloads:\n",
+    "    print(\"\\n\" + \"=\"*60)\n",
+    "    print(f\"Running: {workload}\")\n",
+    "    print(\"=\"*60)\n",
     "    !python runner.py \\\n",
     "        --backend vllm \\\n",
     "        --model microsoft/phi-2 \\\n",
-    "        --workload workloads/{wl}/config.yaml \\\n",
-    "        --out results/vllm_{wl}_colab"
+    "        --workload workloads/{workload}/config.yaml \\\n",
+    "        --out {output}\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"ALL BENCHMARKS COMPLETE!\")\n",
+    "print(\"=\"*60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 7: View Results"
    ]
   },
   {
@@ -125,25 +219,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 7: View results summary\n",
+    "# Display results summary\n",
     "import json\n",
     "import os\n",
     "\n",
-    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"=\"*60)\n",
     "print(\"vLLM BENCHMARK RESULTS (microsoft/phi-2)\")\n",
     "print(\"=\"*60)\n",
     "\n",
-    "for run_dir in sorted(os.listdir(\"results\")):\n",
+    "results_dir = \"/content/systemds-bench-gpt/results\"\n",
+    "for run_dir in sorted(os.listdir(results_dir)):\n",
     "    if run_dir.startswith(\"vllm_\"):\n",
-    "        metrics_path = f\"results/{run_dir}/metrics.json\"\n",
+    "        metrics_path = f\"{results_dir}/{run_dir}/metrics.json\"\n",
     "        if os.path.exists(metrics_path):\n",
     "            with open(metrics_path) as f:\n",
     "                m = json.load(f)\n",
-    "            workload = run_dir.replace(\"vllm_\", \"\").replace(\"_colab\", \"\")\n",
+    "            workload = run_dir.replace(\"vllm_\", \"\")\n",
+    "            acc = m.get('accuracy_mean', 0) * 100\n",
+    "            acc_count = m.get('accuracy_count', 'N/A')\n",
+    "            lat = m.get('latency_ms_p50', 0)\n",
+    "            thr = m.get('throughput_req_per_s', 0)\n",
+    "            \n",
     "            print(f\"\\n{workload.upper()}:\")\n",
-    "            print(f\"  Accuracy:   {m.get('accuracy_count', 'N/A')} ({m.get('accuracy_mean', 0)*100:.0f}%)\")\n",
-    "            print(f\"  Latency:    {m.get('latency_ms_p50', 0):.0f}ms (p50)\")\n",
-    "            print(f\"  Throughput: {m.get('throughput_req_per_s', 0):.2f} req/s\")"
+    "            print(f\"  Accuracy:   {acc:.0f}% ({acc_count})\")\n",
+    "            print(f\"  Latency:    {lat:.0f}ms (p50)\")\n",
+    "            print(f\"  Throughput: {thr:.3f} req/s\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 8: Download Results"
    ]
   },
   {
@@ -152,23 +259,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 8: Download vLLM results\n",
-    "# Unzip this in your project's results/ folder, then regenerate report\n",
+    "# Zip and download all vLLM results\n",
+    "import os\n",
+    "os.chdir('/content/systemds-bench-gpt')\n",
     "\n",
-    "!mkdir -p vllm_only_results\n",
-    "!cp -r results/vllm_* vllm_only_results/\n",
-    "!zip -r vllm_results.zip vllm_only_results/\n",
+    "!zip -r vllm_results_final.zip results/vllm_*\n",
     "\n",
     "from google.colab import files\n",
-    "files.download('vllm_results.zip')\n",
+    "files.download('vllm_results_final.zip')\n",
     "\n",
     "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"NEXT STEPS:\")\n",
+    "print(\"DOWNLOAD COMPLETE!\")\n",
     "print(\"=\"*60)\n",
-    "print(\"1. Download vllm_results.zip (should auto-download)\")\n",
-    "print(\"2. Unzip into your project: unzip vllm_results.zip -d results/\")\n",
-    "print(\"3. Regenerate report: python scripts/report.py --out benchmark_report.html\")\n",
-    "print(\"4. Open benchmark_report.html - vLLM will appear with other backends!\")"
+    "print(\"\\nNext steps in your local IDE:\")\n",
+    "print(\"1. unzip ~/Downloads/vllm_results_final.zip -d results/\")\n",
+    "print(\"2. python scripts/report.py --out benchmark_report.html\")\n",
+    "print(\"3. open benchmark_report.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 9: Cleanup (Optional)"
    ]
   },
   {
@@ -177,9 +290,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 9: Cleanup - stop the server\n",
-    "server_process.terminate()\n",
-    "print(\"vLLM server stopped.\")"
+    "# Stop the vLLM server to free GPU memory\n",
+    "!pkill -f \"vllm.entrypoints\" || True\n",
+    "print(\"✓ vLLM server stopped\")"
    ]
   }
  ],
