--- a/notebooks/vllm_colab.ipynb
+++ b/notebooks/vllm_colab.ipynb
@@ -27,9 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Verify GPU is available\n",
         "!nvidia-smi\n",
@@ -37,7 +35,9 @@
         "print(\"If you see a GPU above (T4, V100, etc.), you're good!\")\n",
         "print(\"If not: Runtime → Change runtime type → T4 GPU\")\n",
         "print(\"=\"*50)"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -48,15 +48,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Install vLLM and other dependencies\n",
         "!pip install vllm torch transformers accelerate -q\n",
         "!pip install pyyaml numpy tqdm datasets requests psutil rouge-score -q\n",
         "print(\"\\n✓ Dependencies installed\")"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -67,9 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Clone or update repository\n",
         "import os\n",
@@ -85,7 +83,9 @@
         "\n",
         "print(\"\\n✓ Repository ready\")\n",
         "!pwd"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -96,16 +96,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
-        "# Start vLLM server with phi-2 model\n",
+        "# Start vLLM server - CHOOSE YOUR MODEL\n",
         "import subprocess\n",
         "import time\n",
         "import requests\n",
         "\n",
-        "MODEL = \"microsoft/phi-2\"  # 2.7B params, fits in T4 GPU (15GB)\n",
+        "# ========== MODEL SELECTION ==========\n",
+        "# Uncomment ONE of these options:\n",
+        "\n",
+        "# Option 1: phi-2 (2.7B) - Fast, good for testing\n",
+        "MODEL = \"microsoft/phi-2\"\n",
+        "\n",
+        "# Option 2: Llama-2-7B - Better accuracy, fits in T4 (requires HF login)\n",
+        "# MODEL = \"meta-llama/Llama-2-7b-chat-hf\"\n",
+        "\n",
+        "# Option 3: TinyLlama (1.1B) - Fastest, lowest accuracy\n",
+        "# MODEL = \"TinyLlama/TinyLlama-1.1B-Chat-v1.0\"\n",
+        "\n",
+        "# =====================================\n",
         "\n",
         "# Kill any existing server\n",
         "!pkill -f \"vllm.entrypoints\" 2>/dev/null || True\n",
@@ -145,7 +155,9 @@
         "    !ps aux | grep -E \"vllm|python\" | grep -v grep | head -5\n",
         "    print(\"\\nLatest logs:\")\n",
         "    !tail -30 vllm_server.log"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -156,9 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Quick test to verify server works\n",
         "import requests\n",
@@ -171,7 +181,9 @@
         "    print(f\"✗ Server not ready: {e}\")\n",
         "    print(\"\\nRun the previous cell again or check logs:\")\n",
         "    !tail -30 vllm_server.log"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -182,9 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Run all 4 workloads\n",
         "import os\n",
@@ -210,7 +220,9 @@
         "print(\"\\n\" + \"=\"*60)\n",
         "print(\"ALL BENCHMARKS COMPLETE!\")\n",
         "print(\"=\"*60)"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -221,9 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Display results summary\n",
         "import json\n",
@@ -250,7 +260,9 @@
         "            print(f\"  Accuracy:   {acc:.0f}% ({acc_count})\")\n",
         "            print(f\"  Latency:    {lat:.0f}ms (p50)\")\n",
         "            print(f\"  Throughput: {thr:.3f} req/s\")"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -261,9 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Zip and download all vLLM results\n",
         "import os\n",
@@ -281,7 +291,9 @@
         "print(\"1. unzip ~/Downloads/vllm_results_final.zip -d results/\")\n",
         "print(\"2. python scripts/report.py --out benchmark_report.html\")\n",
         "print(\"3. open benchmark_report.html\")"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -292,14 +304,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Stop the vLLM server to free GPU memory\n",
         "!pkill -f \"vllm.entrypoints\" || True\n",
         "print(\"✓ vLLM server stopped\")"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
