Add larger vLLM models to future work

--- a/notebooks/vllm_colab.ipynb
+++ b/notebooks/vllm_colab.ipynb
@@ -31,12 +31,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Verify GPU is available\n",
-        "!nvidia-smi\n",
-        "print(\"\\n\" + \"=\"*50)\n",
-        "print(\"If you see a GPU above (T4, V100, etc.), you're good!\")\n",
-        "print(\"If not: Runtime → Change runtime type → T4 GPU\")\n",
-        "print(\"=\"*50)"
+        "!nvidia-smi\n"
       ]
     },
     {
@@ -52,7 +47,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Install vLLM and other dependencies\n",
         "!pip install vllm torch transformers accelerate -q\n",
         "!pip install pyyaml numpy tqdm datasets requests psutil rouge-score -q\n",
         "print(\"\\n✓ Dependencies installed\")"
@@ -71,7 +65,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Clone or update repository\n",
         "import os\n",
         "\n",
         "if os.path.exists('/content/systemds-bench-gpt'):\n",
@@ -100,13 +93,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Start vLLM server - CHOOSE YOUR MODEL\n",
+        "# Start vLLM server\n",
         "import subprocess\n",
         "import time\n",
         "import requests\n",
         "\n",
         "# ========== MODEL SELECTION ==========\n",
-        "# Uncomment ONE of these options:\n",
         "\n",
         "# Option 1: phi-2 (2.7B) - Fast, good for testing\n",
         "MODEL = \"microsoft/phi-2\"\n",
@@ -119,7 +111,7 @@
         "\n",
         "# =====================================\n",
         "\n",
-        "# Kill any existing server\n",
+        "# kill any existing server\n",
         "!pkill -f \"vllm.entrypoints\" 2>/dev/null || True\n",
         "time.sleep(2)\n",
         "\n",
@@ -127,16 +119,16 @@
         "print(\"This takes 4-6 minutes (download + load + compile CUDA graphs)...\")\n",
         "print()\n",
         "\n",
-        "# Start server in background\n",
+        "# start server in background\n",
         "!nohup python -m vllm.entrypoints.openai.api_server \\\n",
         "    --model {MODEL} \\\n",
         "    --host 0.0.0.0 \\\n",
         "    --port 8000 \\\n",
         "    --dtype float16 > vllm_server.log 2>&1 &\n",
         "\n",
-        "# Wait for server to start (6 minutes max)\n",
+        "# wait for server to start\n",
         "print(\"Waiting for model to load...\")\n",
-        "for i in range(72):  # 6 minutes max\n",
+        "for i in range(72):  \n",
         "    time.sleep(5)\n",
         "    elapsed = (i+1)*5\n",
         "    mins = elapsed // 60\n",
@@ -172,7 +164,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Quick test to verify server works\n",
+        "# quick test to verify server works\n",
         "import requests\n",
         "\n",
         "try:\n",
@@ -198,7 +190,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Run all 4 workloads\n",
+        "# run all 4 workloads\n",
         "import os\n",
         "os.chdir('/content/systemds-bench-gpt')\n",
         "\n",
@@ -215,7 +207,7 @@
         "    print(\"=\"*60)\n",
         "    !python runner.py \\\n",
         "        --backend vllm \\\n",
-        "        --model microsoft/phi-2 \\\n",
+        "        --model {MODEL} \\\n",
         "        --workload workloads/{workload}/config.yaml \\\n",
         "        --out {output}\n",
         "\n",
@@ -237,7 +229,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Display results summary\n",
+        "# display results summary\n",
         "import json\n",
         "import os\n",
         "\n",
@@ -277,7 +269,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Zip and download all vLLM results\n",
+        "# zip and download all vLLM results\n",
         "import os\n",
         "os.chdir('/content/systemds-bench-gpt')\n",
         "\n",
