Clean up notebook comments

--- a/notebooks/vllm_colab.ipynb
+++ b/notebooks/vllm_colab.ipynb
@@ -300,7 +300,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Stop the vLLM server to free GPU memory\n",
+        "# stop the vLLM server to free GPU memory\n",
         "!pkill -f \"vllm.entrypoints\" || True\n",
         "print(\"✓ vLLM server stopped\")"
       ]
